done putting styles and fixed the input-group-addon (the calender icon) by using position relative, there's no unwanted gap now

--- a/src/App.scss
+++ b/src/App.scss
@@ -42,3 +42,98 @@ footer {
 label {
     color: darken($titleColor, 10);
 }
+
+.headline {
+    font-size: 2em;
+    color: darken($titleColor, 10);
+}
+
+.title {
+    font-style: italic;
+    color: darken($titleColor, 10);
+    padding: 20px;
+    font-size: 2em;
+    font-weight: bold;
+    // line-height: 310px;
+}
+
+
+/*  Basic Styling To Override Default For Basic HTML Elements */
+
+label {
+    display: block;
+    font-size: 27px;
+    font-weight: normal;
+}
+
+input {
+    display: block;
+    height: 60px;
+    width: 320px;
+    background: #22b2da;
+    color: #f0d43a;
+    font-size: 20px;
+    font-family: 'Oswald', sans-serif;
+    border: none;
+}
+
+button {
+    // width: 400px;
+    // height: 100px;
+    // margin-left: auto;
+    // margin-right: auto;
+    padding: 10px;
+    width: 100px;
+    background: rgba(25, 70, 100, .8);
+    color: #f0d43a;
+    font-size: 18px;
+    font-family: 'Oswald', sans-serif;
+    // border: none;
+    border-radius: 10px;
+    box-shadow: 2px 4px 5px #444;
+    &:hover {
+        background: #3b4a6b;
+    }
+}
+
+h1 {
+    font-size: 36px;
+}
+
+textarea {
+    background: #22b2da;
+    color: #f0d43a;
+    font-size: 20px;
+    font-family: 'Oswald', sans-serif;
+}
+
+
+/* Reset style for HTML element on active to have no border*/
+
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
+}
+
+
+/* Style for Placeholder Text*/
+
+ ::placeholder {
+    /* Firefox, Chrome, Opera */
+    color: #f0d43a;
+    font-family: 'Oswald', sans-serif;
+}
+
+ :-ms-input-placeholder {
+    /* Internet Explorer 10-11 */
+    color: #f0d43a;
+    font-family: 'Oswald', sans-serif;
+}
+
+ ::-ms-input-placeholder {
+    /* Microsoft Edge */
+    color: #f0d43a;
+    font-family: 'Oswald', sans-serif;
+}
